# Simian-ComfyUI-WebApps

./: MANIFEST.in  README.md  pyproject.toml  simiancomfy.py
simian/comfy/: __init__.py  __main__.py  connect.py  interpret_json.py
simian/comfy/examples/compositemasked/: DemoImageInputNodesAPI.json  comfy_app.py
simian/comfy/template/: comfy_webapp.py  requirements.txt
template/: comfy_webapp.py  requirements.txt
template/css/: style.css
tests/: test_add_group.py  test_cli.py  test_create_comp.py  test_integration.py  test_node_dict.py  test_template.py
