[project]
name = "Simian-ComfyUI-WebApps"
description = "Simian webapp integration for ComfyUI webapp api nodes."
authors = [
    { name = "MonkeyProof Solutions B.V.", email = "info@simiansuite.com" },
]
dependencies = [
    "pillow",
    "simian-gui",
    "simian-local",
    "ComfyUI_webapp @git+https://github.com/MonkeyProof-Solutions-BV/ComfyUI_webapp",
]
requires-python = ">= 3.10"
optional-dependencies.dev = ["simian-builder"]
version = '0.1.0'
license = "GNU General Public License v3.0"
license-files = ["LICENSE"]

[tool.ruff]
line-length = 100
