[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Simian-ComfyUI-WebApps"
description = "Simian webapp integration for ComfyUI webapp api nodes."
authors = [
    { name = "MonkeyProof Solutions B.V.", email = "info@simiansuite.com" },
]
dependencies = [
    "pillow",
    "simian-gui",
    "simian-local",
    "websocket-client~=1.8.0",
]
requires-python = ">= 3.10"
optional-dependencies.dev = ["simian-builder"]
optional-dependencies.test = ["pytest", "pytest-cov"]
version = '0.1.0'
license = "GPL-3.0-only"

[tool.setuptools]
include-package-data = true
packages = ["simian", "simian.comfy"]

[tool.ruff]
line-length = 100

[tool.pytest]
testpaths = ['./tests']
addopts = ['--cov-report=term', '--cov-report=xml']

[tool.coverage.run]
branch = true

[tool.coverage.paths]
source = ['/simian/comfy']

[tool.coverage.xml]
output = 'coverage.xml'
